# ECE51216-Project

./: CMakeLists.txt  Clause.cpp  Clause.h  DPLL.cpp  DPLL.h  Heuristics.cpp  Heuristics.h  Parser.cpp  Parser.h  README.md  README.txt  main.cpp  mySAT
Code/: Clause.cpp  Clause.h  Heuristics.h  Parser.cpp  main.cpp
SAT/: a.cnf  b.cnf  broken.cnf  c.cnf  d.cnf  e.cnf  f.cnf  g.cnf  global.cnf  h.cnf  ok.cnf  quinn.cnf  uf20-01-small.cnf
